@@ -5,8 +5,9 @@ Data::Gimei - a Perl port of Ruby's gimei generates fake data in Japanese.
 
 # SYNOPSIS
 
+    use strict; use warnings;
+    use v5.22;
     binmode STDOUT, ":utf8";
-    use feature ':5.12';
 
     use Data::Gimei;
     my $name = Data::Gimei::Name->new();
