@@ -1,8 +1,7 @@
 # Deterministic random test
 
-use strict;
-use warnings;
-use feature ':5.12';
+use strict; use warnings;
+use v5.22;
 
 use Test::More;
 use Data::Gimei;
